# ci-exercise

./: .pre-commit-config.yaml  CHANGELOG.md  noxfile.py  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
src/unc/: __init__.py
tests/: test_stdunc.py
